--- a/index.html
+++ b/index.html
@@ -79,7 +79,10 @@
     <li class="indent" _msttexthash="74859668" _msthash="109">本软件不具备储存信息的功能，使用期间如关闭软件将丢失所有内容</li>
     <li class="indent" _msttexthash="38016693" _msthash="110">如出现以上情况道政工作室概不责</li>
 </ul><br><br>
-
+<footer id="footer">
+<p>Copyright © 2023 Daozheng Inc. All Rights Reserved</p>
+	<li><a href="https://daozheng.asia/">工作室主页</a>
+  </footer>
                  
 </div> </div><!-- outer most formatting-->
 <!--? require ("counter.php");?-->
