--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 </ul><br><br>
 <footer id="footer">
 <p>Copyright © 2023 Daozheng Inc. All Rights Reserved</p>
-	<li><a href="https://daozheng.asia/">工作室主页</a>
+	<li><a href="https://www.daozheng.asia/">工作室主页</a>
   </footer>
                  
 </div> </div><!-- outer most formatting-->
