--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <a name="download"></a>
 <h3 _msttexthash="26120588" _msthash="107">下载版本 1.0.0：</h3>
 
-<font _mstmutation="1" _msttexthash="180949145" _msthash="108"><a href="https://download.daozheng.asia/随心待办.exe" _mstmutation="1" _istranslated="1">EXE</a> 安装 （7.6MB）<br _mstmutation="1" _istranslated="1"><br _mstmutation="1" _istranslated="1"><br _mstmutation="1" _istranslated="1"><br _mstmutation="1" _istranslated="1"><br _mstmutation="1" _istranslated="1"> <strong _mstmutation="1" _istranslated="1">使用须知：</strong></font>
+<font _mstmutation="1" _msttexthash="180949145" _msthash="108"><a href="https://download.daozheng.asia/heart-to-do.zip" _mstmutation="1" _istranslated="1">ZIP 安装 （7.6MB）</a><br _mstmutation="1" _istranslated="1"><br _mstmutation="1" _istranslated="1"><br _mstmutation="1" _istranslated="1"><br _mstmutation="1" _istranslated="1"><br _mstmutation="1" _istranslated="1"> <strong _mstmutation="1" _istranslated="1">使用须知：</strong></font>
 <ul>
     <li class="indent" _msttexthash="74859668" _msthash="109">本软件不具备储存信息的功能，使用期间如关闭软件将丢失所有内容</li>
     <li class="indent" _msttexthash="38016693" _msthash="110">如出现以上情况道政工作室概不责</li>
