--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
 <div style="width: 800px; text-align: justify;">
 
 <div style="BACKGROUND-COLOR: #BBCCCC; padding: 0 1em 0.7em 1em">
-<h2 _msttexthash="14064973" _msthash="57">随心代办<sup _istranslated="1"><font size="-1" _istranslated="1"></font></sup></h2><font _mstmutation="1" _msttexthash="183445912" _msthash="58">适用于用于Windows系统的便携式离线待办事项记录器</font></div><br>
+<h2 _msttexthash="14064973" _msthash="57">随心代办<sup _istranslated="1"><font size="-1" _istranslated="1"></font></sup></h2><font _mstmutation="1" _msttexthash="183445912" _msthash="58">适用于用于Windows系统的便携式离线待办事项记录应用</font></div><br>
 
-<font _mstmutation="1" _msttexthash="863916300" _msthash="59"><strong _mstmutation="1" _istranslated="1">版本 1.0.0</strong><br _mstmutation="1" _istranslated="1"> 最后更新：2023 年 11 月 19 日<br _mstmutation="1" _istranslated="1"> Copyright © 2023 Daozheng Inc. All Rights Reserved<br _mstmutation="1" _istranslated="1"> customer@daozheng.asia<br _mstmutation="1" _istranslated="1"> <span class="maroon" _mstmutation="1" _istranslated="1">免费软件 - 没有广告.</span><br _mstmutation="1" _istranslated="1"> <a href="#download" _mstmutation="1" _istranslated="1">下载</a></font><br><br>
+<font _mstmutation="1" _msttexthash="863916300" _msthash="59"><strong _mstmutation="1" _istranslated="1">版本 1.0.0</strong><br _mstmutation="1" _istranslated="1"> 最后更新：2023 年 11 月 19 日<br _mstmutation="1" _istranslated="1"> <br _mstmutation="1" _istranslated="1"> customer@daozheng.asia<br _mstmutation="1" _istranslated="1"> <span class="maroon" _mstmutation="1" _istranslated="1">免费软件 - 没有广告.</span><br _mstmutation="1" _istranslated="1"> <a href="#download" _mstmutation="1" _istranslated="1">下载</a></font><br><br>
 
-<h3 _msttexthash="13930904" _msthash="60">概述：</h3><font _mstmutation="1" _msttexthash="4235048727" _msthash="61">随心待办<sup _mstmutation="1" _istranslated="1"><font size="-1" _istranslated="1"></font></sup> <strong _mstmutation="1" _istranslated="1">是 32 位和 64 位 Windows系统的</strong><strong _mstmutation="1" _istranslated="1">便携式离线</strong>待办事项记录器。软件仅有一个exe文件，去除累赘，整个软件仅7.6MB————超小！软件不用联网（也不能联网）就能使用。</font><br><br>
+<h3 _msttexthash="13930904" _msthash="60">概述：</h3><font _mstmutation="1" _msttexthash="4235048727" _msthash="61">随心待办是基于Python开发的Windows<sup _mstmutation="1" _istranslated="1"><font size="-1" _istranslated="1"></font></sup> <strong _mstmutation="1" _istranslated="1"></strong><strong _mstmutation="1" _istranslated="1">便携式离线</strong>待办事项记录应用。软件仅有一个exe文件，去除累赘，整个软件仅7.6MB————超小！软件不用联网（也不能联网）就能使用。</font><br><br>
 <!-- <img src="" width="985" height="651" alt=""><br><br> -->
 
 <a name="download"></a>
