--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 <h3 _msttexthash="13930904" _msthash="60">概述：</h3><font _mstmutation="1" _msttexthash="4235048727" _msthash="61">随心待办是基于Python开发的Windows<sup _mstmutation="1" _istranslated="1"><font size="-1" _istranslated="1"></font></sup> <strong _mstmutation="1" _istranslated="1"></strong><strong _mstmutation="1" _istranslated="1">便携式离线</strong>待办事项记录应用。软件仅有一个exe文件，去除累赘，整个软件仅7.6MB————超小！软件不用联网（也不能联网）就能使用。</font><br><br>
 <!-- <img src="" width="985" height="651" alt=""><br><br> -->
-
+<a href="/phone" _mstmutation="1" _istranslated="1">手机版</a>
 <a name="download"></a>
 <h3 _msttexthash="26120588" _msthash="107">下载版本 1.0.0：</h3>
 
