--- a/phone/index.html
+++ b/phone/index.html
@@ -66,15 +66,15 @@
 <div style="BACKGROUND-COLOR: #BBCCCC; padding: 0 1em 0.7em 1em">
 <h2 _msttexthash="14064973" _msthash="57">随心代办<sup _istranslated="1"><font size="-1" _istranslated="1"></font></sup></h2><font _mstmutation="1" _msttexthash="183445912" _msthash="58">适用于用于Windows系统的便携式离线待办事项记录应用</font></div><br>
 
-<font _mstmutation="1" _msttexthash="863916300" _msthash="59"><strong _mstmutation="1" _istranslated="1">版本 1.0.0</strong><br _mstmutation="1" _istranslated="1"> 最后更新：2023 年 11 月 19 日<br _mstmutation="1" _istranslated="1"> <br _mstmutation="1" _istranslated="1"> customer@daozheng.asia<br _mstmutation="1" _istranslated="1"> <span class="maroon" _mstmutation="1" _istranslated="1">免费软件 - 没有广告.</span><br _mstmutation="1" _istranslated="1"> <a href="#download" _mstmutation="1" _istranslated="1">下载</a></font><br><br>
+<font _mstmutation="1" _msttexthash="863916300" _msthash="59"><strong _mstmutation="1" _istranslated="1">版本 1.0.0</strong><br _mstmutation="1" _istranslated="1"> 最后更新：2023 年 12 月 30 日<br _mstmutation="1" _istranslated="1"> <br _mstmutation="1" _istranslated="1"> customer@daozheng.asia<br _mstmutation="1" _istranslated="1"> <span class="maroon" _mstmutation="1" _istranslated="1">免费软件 - 没有广告.</span><br _mstmutation="1" _istranslated="1"> <a href="#download" _mstmutation="1" _istranslated="1">下载</a></font><br><br>
 
-<h3 _msttexthash="13930904" _msthash="60">概述：</h3><font _mstmutation="1" _msttexthash="4235048727" _msthash="61">随心待办是基于Python开发的Windows<sup _mstmutation="1" _istranslated="1"><font size="-1" _istranslated="1"></font></sup> <strong _mstmutation="1" _istranslated="1"></strong><strong _mstmutation="1" _istranslated="1">便携式离线</strong>待办事项记录应用。软件仅有一个exe文件，去除累赘，整个软件仅7.6MB————超小！软件不用联网（也不能联网）就能使用。</font><br><br>
+<h3 _msttexthash="13930904" _msthash="60">概述：</h3><font _mstmutation="1" _msttexthash="4235048727" _msthash="61">随心待办是基于Python开发的Android<sup _mstmutation="1" _istranslated="1"><font size="-1" _istranslated="1"></font></sup> <strong _mstmutation="1" _istranslated="1"></strong><strong _mstmutation="1" _istranslated="1">便携式离线</strong>整个软件仅7.7MB————超小！软件不用联网（也不能联网）就能使用。</font><br><br>
 <!-- <img src="" width="985" height="651" alt=""><br><br> -->
-<a href="/phone" _mstmutation="1" _istranslated="1">手机版</a>
+<a href="/" _mstmutation="1" _istranslated="1">电脑版</a>
 <a name="download"></a>
 <h3 _msttexthash="26120588" _msthash="107">下载版本 1.0.0：</h3>
 
-<font _mstmutation="1" _msttexthash="180949145" _msthash="108"><a href="https://download.daozheng.asia/heart-to-do.zip" _mstmutation="1" _istranslated="1">ZIP 安装 （7.6MB）</a><br _mstmutation="1" _istranslated="1"><br _mstmutation="1" _istranslated="1"><br _mstmutation="1" _istranslated="1"><br _mstmutation="1" _istranslated="1"><br _mstmutation="1" _istranslated="1"> <strong _mstmutation="1" _istranslated="1">使用须知：</strong></font>
+<font _mstmutation="1" _msttexthash="180949145" _msthash="108"><a href="https://download.daozheng.asia/heart-to-do.apk" _mstmutation="1" _istranslated="1">APK 安装 （7.7MB）</a><br _mstmutation="1" _istranslated="1"><br _mstmutation="1" _istranslated="1"><br _mstmutation="1" _istranslated="1"><br _mstmutation="1" _istranslated="1"><br _mstmutation="1" _istranslated="1"> <strong _mstmutation="1" _istranslated="1">使用须知：</strong></font>
 <ul>
     <li class="indent" _msttexthash="74859668" _msthash="109">本软件不具备储存信息的功能，使用期间如关闭软件将丢失所有内容</li>
     <li class="indent" _msttexthash="38016693" _msthash="110">如出现以上情况道政工作室概不责</li>
